[package]
name = "relayer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"

candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = "1.0.210"
serde_json = "1.0.128"
solana-client-icp = { git = "https://github.com/hide-yoshi/solana-client-icp" }
